--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -114,6 +114,15 @@
     
 
 
+"axios": "^1.7.7",
+  
+    
+
+
+  
+    
+
+
 "react": "^18.2.0",
   
     
@@ -141,7 +150,16 @@
     
 
 
-"react-router-dom": "^6.27.0"
+"react-router-dom": "^6.27.0",
+  
+    
+
+
+  
+    
+
+
+"sweetalert2": "^11.14.4"
   
     
 
